--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,4 +1,6 @@
 // CSS Variable
 // $primary: blue;
 $box-background-color: hsla(0, 0%, 30%, 1);
+$table-background-color: hsla(0, 0%, 30%, 1);
+$dropdown-content-background-color: hsla(0, 0%, 30%, 1);
 @import '~bulma/bulma';
